some of #4 done

--- a/OpeEMapAdmin/src/main/webapp/css/openhierarchy.css
+++ b/OpeEMapAdmin/src/main/webapp/css/openhierarchy.css
@@ -201,7 +201,8 @@ header .user .logged-out {
 }
 
 input[type="submit"], input[type="button"], button {
-	padding: 10px 20px 9px 20px;	
+	/*padding: 10px 20px 9px 20px;*/
+	padding: 8px;	
 }
 
 input[type="password"] {
